Issue #215: Fixing minor PDM memory optimizations.